fixed social icon shadow overlap in mobile view

--- a/assets/scss/templates/_main.scss
+++ b/assets/scss/templates/_main.scss
@@ -48,9 +48,10 @@
     margin: auto;
 
     margin-bottom: 30px;
-    a{
+    li{
 
       background-color:  #F8F8F8;
+      z-index: 3;
       
     }
   }
